--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@srv/feature": ["library/feature-lib/src/index.ts"],
+      "@srv/shared": ["library/shared-lib/src/index.ts"],
+      "@srv/ui": ["library/ui-lib/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
